Comecei as páginas dos remédios específicos (de novo).

--- a/html/alopaticos.html
+++ b/html/alopaticos.html
@@ -53,30 +53,15 @@
           <h1>ALOPÁTICOS</h1>
         </article>
 
-        <article class="row1">
-          <div>
+        <article class="importance">
             <h2>A IMPORTÂNCIA DOS CUIDADOS PEDIÁTRICOS</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
-          </div>
-          <div>
-            <img src="../img/pediatria1.png">
-          </div>
-        </article>
-        <article class="row2">
-          <div>
-            <img src="../img/pediatria2.png">
-          </div>
-          <div>
-            <h2>MEDICAMENTOS PEDIÁTRICOS</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
-            <img src="../img/pediatria3.png">
-          </div>
         </article>
 
         <article class="carousel">
-          <h3>MAIS POPULARES</h3>
+          <h3>EXPLORE</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
           <div class="carousel-container">
             <span class="material-symbols-rounded">
               chevron_left
@@ -105,6 +90,16 @@
               chevron_right
             </span>
           </div>
+        </article>
+
+        <article class="benefits">
+          <h2>3 BENEFÍCIOS DOS MEDICAMENTOS ALOPÁTICOS</h2>
+          <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
+          </div>
+          <img src="../img/pediatria3.png>
         </article>
       </main>
       <footer>
