Tentando arrumar um bug do carousel.

--- a/html/fitoterapicos.html
+++ b/html/fitoterapicos.html
@@ -10,6 +10,7 @@
       />
       <link rel="stylesheet" href="../style.css" />
       <link rel="stylesheet" href="../css/drugs_sect.css" />
+      <link rel="stylesheet" href="../css/fitoterapicos.css" />
       <title>Wikimedic</title>
     </head>
     <body>
@@ -54,9 +55,14 @@
         </article>
 
         <article class="importance">
+          <div>
             <h2>A IMPORTÂNCIA DOS CUIDADOS PEDIÁTRICOS</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices convallis lectus, a varius orci gravida quis. Nunc non velit non neque lobortis dignissim. Phasellus efficitur mi mattis commodo ultricies.</p>
+          </div>
+          <div>
+            <img src="../img/pediatria1.png">
+          </div>
         </article>
 
         <article class="carousel">
