--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@ code
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
-      <script src="./src/env.js"></script>
-      <script>
+      <script src="./js/env.js" type="module"></script>
+      <script type="module">
+        import { serverURL } from "./js/env.js"
         async function home() {
           const response = await fetch(
             "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
@@ -178,6 +179,7 @@ code
           document.cookie = "meuCookie=valor; path=/";
           console.log(document.cookie);
 
+          console.log("Testando: " + serverURL)
           const serverResponse = await fetch(serverURL)
           if(!serverResponse.ok)
           {
