Terminei o carousel (acho que ele parou de ser bipolar).

--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -85,26 +85,48 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel">
-            <figure>
-              <img src="../img/senku.jpg" />
-              <figcaption>Senku 3 bilhões de mL</figcaption>
-            </figure>
-            <figure>
-              <img src="../img/senku.jpg" />
-              <figcaption>Senku 4 bilhões de mL</figcaption>
-            </figure>
-            <figure>
-              <img src="../img/senku.jpg" />
-              <figcaption>Senku 5 bilhões de mL</figcaption>
-            </figure>
-            <figure>
-              <img src="../img/senku.jpg" />
-              <figcaption>Senku 6 bilhões de mL</figcaption>
-            </figure>
-            <figure>
-              <img src="../img/senku.jpg" />
-              <figcaption>Senku 7 bilhões de mL</figcaption>
-            </figure>
+            <a href="">
+              <figure>
+                <img src="../img/senku.jpg" />
+                <figcaption>Senku 3 bilhões de mL</figcaption>
+              </figure>
+            </a>
+            <a href="">
+              <figure>
+                <img src="../img/senku.jpg" />
+                <figcaption>Senku 4 bilhões de mL</figcaption>
+              </figure>
+            </a>
+            <a href="">
+              <figure>
+                <img src="../img/senku.jpg" />
+                <figcaption>Senku 5 bilhões de mL</figcaption>
+              </figure>
+            </a>
+            <a href="">
+              <figure>
+                <img src="../img/senku.jpg" />
+                <figcaption>Senku 6 bilhões de mL</figcaption>
+              </figure>
+            </a>
+            <a href="">
+              <figure>
+                <img src="../img/senku.jpg" />
+                <figcaption>Senku 7 bilhões de mL</figcaption>
+              </figure>
+            </a>
+            <a href="">
+              <figure>
+                <img src="../img/senku.jpg" />
+                <figcaption>Senku 8 bilhões de mL</figcaption>
+              </figure>
+            </a>
+            <a href="">
+              <figure>
+                <img src="../img/senku.jpg" />
+                <figcaption>Senku 9 bilhões de mL</figcaption>
+              </figure>
+            </a>
           </div>
           <span class="material-symbols-rounded" id="right">chevron_right</span>
         </div>
@@ -132,7 +154,6 @@
             commodo ultricies.
           </p>
         </div>
-        <img src="../img/pediatria3.png" />
       </article>
     </main>
     <footer>
