Quase terminando as páginas, faltam alguns ajustes, então começarei a página de login e depois a responsividade.

--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -19,7 +19,7 @@
       </div>
       <nav>
         <a href="../index.html">Home</a>
-        <a href="">Em alta</a>
+        <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
@@ -36,7 +36,6 @@
             <span></span>
           </div>
           <ul>
-            <li><a href="../html/hot_drugs.html">Remédios Populares</a></li>
             <li><a href="../html/pediatria.html">Pediatria</a></li>
             <li><a href="../html/fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="../html/genericos.html">Genéricos</a></li>
@@ -48,6 +47,7 @@
         </nav>
       </div>
     </header>
+
     <main>
       <article class="header">
         <h1>PEDIATRIA</h1>
@@ -156,6 +156,7 @@
         </div>
       </article>
     </main>
+
     <footer>
       <div>
         <article class="about_us">
