Inicia as páginas de signin, signup e senha esquecida. Adiciona o botão de favorito nos remédios.

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -35,14 +35,15 @@
             <span></span>
           </div>
           <ul>
-            <li><a href="./html/hot_drugs.html">Remédios Populares</a></li>
-            <li><a href="./html/pediatria.html">Pediatria</a></li>
-            <li><a href="./html/fitoterapicos.html">Fitoterápicos</a></li>
-            <li><a href="./html/genericos.html">Genéricos</a></li>
-            <li><a href="./html/homeopaticos.html">Homeopáticos</a></li>
-            <li><a href="./html/similares.html">Similares</a></li>
-            <li><a href="./html/alopaticos.html">Alopáticos</a></li>
-            <li><a href="./index.html">Sobre o projeto</a></li>
+            <li><a href="./pediatria.html">Pediatria</a></li>
+            <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
+            <li><a href="./genericos.html">Genéricos</a></li>
+            <li><a href="./homeopaticos.html">Homeopáticos</a></li>
+            <li><a href="./similares.html">Similares</a></li>
+            <li><a href="./alopaticos.html">Alopáticos</a></li>
+            <li class="selected">
+              <a href="./about_project.html">Sobre o projeto</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -52,10 +53,10 @@
       <article class="header">
         <h1>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h1>
         <div>
-          <a href="">Artigos</a>
-          <a href="">Agenda 2030</a>
-          <a href="">Entrevistas</a>
-          <a href="">Curiosidades</a>
+          <a href="#articles">Artigos</a>
+          <a href="#agenda2030">Agenda 2030</a>
+          <a href="#interview">Entrevistas</a>
+          <a href="#curiosity">Curiosidades</a>
         </div>
       </article>
 
@@ -81,7 +82,7 @@
         </figure>
       </article>
 
-      <article class="articles">
+      <article class="articles" id="articles">
         <img src="../img/lupa_icon.png" alt="Ícone de lupa" />
         <section>
           <h2>ACESSE TAMBÉM</h2>
@@ -111,7 +112,7 @@
         </div>
       </article>
 
-      <article class="agenda2030">
+      <article class="agenda2030" id="agenda2030">
         <h2>AGENDA 2030</h2>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
@@ -165,7 +166,7 @@
         </div>
       </article>
 
-      <article class="interview">
+      <article class="interview" id="interview">
         <div>
           <h2>ENTREVISTAS</h2>
           <p>
@@ -181,10 +182,10 @@
             voluptatibus sit molestias aspernatur vero! Nostrum?
           </p>
         </div>
-        <div class="btn"><a href="../html/interview.html">ACESSE JÁ</a></div>
+        <div class="btn"><a href="./interview.html">ACESSE JÁ</a></div>
       </article>
 
-      <article class="curiosity">
+      <article class="curiosity" id="curiosity">
         <h2>CURIOSIDADES</h2>
         <div>
           <p>
@@ -221,13 +222,13 @@
             <a href="./sobre.html">Sobre nós</a>
           </p>
           <p>
-            <a href="">Missão</a>
+            <a href="./sobre.html#mission">Missão</a>
           </p>
           <p>
-            <a href="">Visão</a>
+            <a href="./sobre.html#vision">Visão</a>
           </p>
           <p>
-            <a href="">Valores</a>
+            <a href="./sobre.html#values">Valores</a>
           </p>
         </article>
         <article class="contact">
