--- a/html/genericos.html
+++ b/html/genericos.html
@@ -27,7 +27,7 @@
         <span class="material-symbols-rounded">search</span>
       </div>
       <div class="login">
-        <a href="../html/login.html">Login</a>
+        <a href="./login.html">Login</a>
         <nav class="menu">
           <input type="checkbox" class="menu-faketrigger" />
           <div class="menu-lines">
@@ -36,15 +36,15 @@
             <span></span>
           </div>
           <ul>
-            <li><a href="../html/pediatria.html">Pediatria</a></li>
-            <li><a href="../html/fitoterapicos.html">Fitoterápicos</a></li>
-            <li class="selected">
-              <a href="../html/genericos.html">Genéricos</a>
+            <li><a href="./pediatria.html">Pediatria</a></li>
+            <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
+            <li>
+              <a class="selected" href="./genericos.html">Genéricos</a>
             </li>
-            <li><a href="../html/homeopaticos.html">Homeopáticos</a></li>
-            <li><a href="../html/similares.html">Similares</a></li>
-            <li><a href="../html/alopaticos.html">Alopáticos</a></li>
-            <li><a href="../index.html">Sobre o projeto</a></li>
+            <li><a href="./homeopaticos.html">Homeopáticos</a></li>
+            <li><a href="./similares.html">Similares</a></li>
+            <li><a href="./alopaticos.html">Alopáticos</a></li>
+            <li><a href="./about_project.html">Sobre o projeto</a></li>
           </ul>
         </nav>
       </div>
@@ -161,16 +161,16 @@
       <div>
         <article class="about_us">
           <p>
-            <a href="./html/sobre.html">Sobre nós</a>
+            <a href="./sobre.html">Sobre nós</a>
           </p>
           <p>
-            <a href="./html/sobre.html#mission">Missão</a>
+            <a href="./sobre.html#mission">Missão</a>
           </p>
           <p>
-            <a href="./html/sobre.html#vision">Visão</a>
+            <a href="./sobre.html#vision">Visão</a>
           </p>
           <p>
-            <a href="./html/sobre.html#values">Valores</a>
+            <a href="./sobre.html#values">Valores</a>
           </p>
         </article>
         <article class="contact">
