--- a/html/interview.html
+++ b/html/interview.html
@@ -35,14 +35,13 @@
             <span></span>
           </div>
           <ul>
-            <li><a href="./html/hot_drugs.html">Remédios Populares</a></li>
-            <li><a href="./html/pediatria.html">Pediatria</a></li>
-            <li><a href="./html/fitoterapicos.html">Fitoterápicos</a></li>
-            <li><a href="./html/genericos.html">Genéricos</a></li>
-            <li><a href="./html/homeopaticos.html">Homeopáticos</a></li>
-            <li><a href="./html/similares.html">Similares</a></li>
-            <li><a href="./html/alopaticos.html">Alopáticos</a></li>
-            <li><a href="./index.html">Sobre o projeto</a></li>
+            <li><a href="./pediatria.html">Pediatria</a></li>
+            <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
+            <li><a href="./genericos.html">Genéricos</a></li>
+            <li><a href="./homeopaticos.html">Homeopáticos</a></li>
+            <li><a href="./similares.html">Similares</a></li>
+            <li><a href="./alopaticos.html">Alopáticos</a></li>
+            <li><a href="./about_project.html">Sobre o projeto</a></li>
           </ul>
         </nav>
       </div>
@@ -62,7 +61,9 @@
         <div>
           <h2>ENTREVISTA DO LUCAS</h2>
           <p>Clique aqui para ir ao instagram do Lucas:</p>
-          <a href="">@lucas</a>
+          <a href="https://www.instagram.com/_lucasffaria_/" target="_blank"
+            >@_lucasffaria_</a
+          >
         </div>
       </article>
 
@@ -79,7 +80,9 @@
         <div>
           <h2>ENTREVISTA DA JÚLIA</h2>
           <p>Clique aqui para ir ao instagram da Júlia:</p>
-          <a href="">@julia</a>
+          <a href="https://www.instagram.com/jm.buzatto/" target="_blank"
+            >@jm.buzatto</a
+          >
         </div>
       </article>
 
@@ -96,7 +99,9 @@
         <div>
           <h2>ENTREVISTA DO COUTINHO</h2>
           <p>Clique aqui para ir ao instagram do Coutinho:</p>
-          <a href="">@coutinho</a>
+          <a href="https://www.instagram.com/j_vcouto/" target="_blank"
+            >@j_vcouto</a
+          >
         </div>
       </article>
     </main>
@@ -105,16 +110,16 @@
       <div>
         <article class="about_us">
           <p>
-            <a href="./html/sobre.html">Sobre nós</a>
+            <a href="./sobre.html">Sobre nós</a>
           </p>
           <p>
-            <a href="./html/sobre.html#mission">Missão</a>
+            <a href="./sobre.html#mission">Missão</a>
           </p>
           <p>
-            <a href="./html/sobre.html#vision">Visão</a>
+            <a href="./sobre.html#vision">Visão</a>
           </p>
           <p>
-            <a href="./html/sobre.html#values">Valores</a>
+            <a href="./sobre.html#values">Valores</a>
           </p>
         </article>
         <article class="contact">
