--- a/html/medic.html
+++ b/html/medic.html
@@ -21,9 +21,8 @@
     </div>
     <nav>
       <a href="../index.html">Home</a>
-      <a href="">Em alta</a>
-      <a href="../html/sobre.html">Sobre nós</a>
-      <a href="../html/about_project.html">Sobre o projeto</a>
+      <a href="./hot_drugs.html">Em alta</a>
+      <a href="./sobre.html">Sobre nós</a>
     </nav>
     <div class="search">
       <input type="text" id="search" />
@@ -31,7 +30,7 @@
     </div>
     <ul id="result"></ul>
     <div class="login">
-      <a href="../html/login.html">Login</a>
+      <a href="./login.html">Login</a>
       <nav class="menu">
         <input type="checkbox" class="menu-faketrigger" />
         <div class="menu-lines">
@@ -40,14 +39,13 @@
           <span></span>
         </div>
         <ul>
-          <li><a href="../html/hot_drugs.html">Remédios Populares</a></li>
-          <li><a href="../html/pediatria.html">Pediatria</a></li>
-          <li><a href="../html/fitoterapicos.html">Fitoterápicos</a></li>
-          <li><a href="../html/genericos.html">Genéricos</a></li>
-          <li><a href="../html/homeopaticos.html">Homeopáticos</a></li>
-          <li><a href="../html/similares.html">Similares</a></li>
-          <li><a href="../html/alopaticos.html">Alopáticos</a></li>
-          <li><a href="../index.html">Sobre o projeto</a></li>
+          <li><a href="./pediatria.html">Pediatria</a></li>
+          <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
+          <li><a href="./genericos.html">Genéricos</a></li>
+          <li><a href="./homeopaticos.html">Homeopáticos</a></li>
+          <li><a href="./similares.html">Similares</a></li>
+          <li><a href="./alopaticos.html">Alopáticos</a></li>
+          <li><a href="./about_project.html">Sobre o projeto</a></li>
         </ul>
       </nav>
     </div>
