--- a/html/signup.html
+++ b/html/signup.html
@@ -26,6 +26,7 @@
     </header>
 
     <main id="main">
+      <!-- informações necessárias: nome, sobrenome, email, email reserva e senha -->
       <form action="" class="">
         <div class="form-group">
           <label for="email_input">Endereço de email</label>
