--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="./img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav>
-        <a href="./index.html">Home</a>
+        <a class="selected" href="./index.html">Home</a>
         <a href="./html/hot_drugs.html">Em alta</a>
         <a href="./html/sobre.html">Sobre nós</a>
       </nav>
@@ -43,6 +43,9 @@
             <li><a href="./html/homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./html/similares.html">Similares</a></li>
             <li><a href="./html/alopaticos.html">Alopáticos</a></li>
+            <li>
+              <a href="./about_project.html">Sobre o projeto</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -53,7 +56,7 @@
         <img src="./img/logo_icon.png" alt="Ícone da logo da Wikimedic" />
         <p>A INFORMAÇÃO A DISTÂNCIA DE UM CLIQUE</p>
         <p>
-          <a href="">Saiba Mais</a>
+          <a href="./html/sobre.html">Saiba Mais</a>
         </p>
         <img src="./img/drugs_background.png" alt="Fundo de remédios" />
       </article>
