--- a/html/login.html
+++ b/html/login.html
@@ -74,6 +74,11 @@
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
+      <script src="../js/env.js" type="module"></script>
+      <script src="../js/metodoServer.js" type="module"></script>
+      <script src="../js/registrar.js" type="module"></script>
+
+
       <!-- <script src="./js/api/script.js"></script> -->
       <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
