--- a/html/login.html
+++ b/html/login.html
@@ -50,7 +50,7 @@
           />
           <a href="./passwd_forget.html">Esqueceu a sua senha?</a>
         </div>
-        <button type="submit" class="btn d-block">Entrar</button>
+        <button class="btn d-block">Entrar</button>
       </form>
       <div class="sign-up">
         <p>
