--- a/html/login.html
+++ b/html/login.html
@@ -50,7 +50,7 @@
           />
           <a href="./passwd_forget.html">Esqueceu a sua senha?</a>
         </div>
-        <button class="btn d-block">Entrar</button>
+        <button id="login" class="btn d-block">Entrar</button>
       </form>
       <div class="sign-up">
         <p>
@@ -76,7 +76,7 @@
       </div>
       <script src="../js/env.js" type="module"></script>
       <script src="../js/metodoServer.js" type="module"></script>
-      <script src="../js/registrar.js" type="module"></script>
+      <script src="../js/login.js" type="module"></script>
 
 
       <!-- <script src="./js/api/script.js"></script> -->
