Config index.html

--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
-      <script src="./js/env.js" type="module"></script>
-      <script type="module">
-        import { serverURL } from "./js/env.js"
+      <script>
         async function home() {
           const response = await fetch(
             "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
