fix (document): resolve os bugs do header e entre outros.
Arrumei os bugs do header, footer e algumas outras páginas, tentei trazer todas as alterações feitas no backend.

--- a/html/login.html
+++ b/html/login.html
@@ -50,7 +50,7 @@
           />
           <a href="./passwd_forget.html">Esqueceu a sua senha?</a>
         </div>
-        <button type="submit" class="btn d-block">Entrar</button>
+        <button id="login" class="btn d-block">Entrar</button>
       </form>
       <div class="sign-up">
         <p>
@@ -74,6 +74,10 @@
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
+      <script src="../js/env.js" type="module"></script>
+      <script src="../js/metodoServer.js" type="module"></script>
+      <script src="../js/login.js" type="module"></script>
+
       <!-- <script src="./js/api/script.js"></script> -->
       <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
