--- a/html/signup.html
+++ b/html/signup.html
@@ -79,11 +79,11 @@
           >
         </div>
         <div class="form-group position-relative">
-          <label for="passw_input">Sua senha</label>
+          <label for="passw_input_conf1">Sua senha</label>
           <input
             type="password"
             class="form-control"
-            id="passw_input"
+            id="passw_input_conf1"
             placeholder="Senha"
           />
         </div>
@@ -96,7 +96,7 @@
             placeholder="Senha"
           />
         </div>
-        <button type="submit" class="btn d-block">Criar conta</button>
+        <button class="btn d-block" id="registrar-button">Criar conta</button>
       </form>
     </main>
 
@@ -116,6 +116,11 @@
         </article>
       </div>
       <!-- <script src="./js/api/script.js"></script> -->
+
+      <script src="../js/env.js" type="module"></script>
+      <script src="../js/metodoServer.js" type="module"></script>
+      <script src="../js/registrar.js" type="module"></script>
+
       <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
