--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
-      <script>
+      <script type="module">
+        import { serverURL } from "./js/env.js";
         async function home() {
           const response = await fetch(
             "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
